# near-simple-swap

./: .gitignore  Makefile  README.md
contracts/defi/: Cargo.toml
contracts/defi/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
res/: defi.wasm  fungible_token.wasm
