[package]
name = "integration-tests"
version = "1.0.0"
edition = "2021"

[dependencies]
near-sdk = "4.1"
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.2.0"
near-contract-standards = "4.1"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1", features = ["full"] }
#tracing = "0.1"
#tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
workspaces = "0.6"
pkg-config = "0.3.1"
